# play_radio

./: CMakeLists.txt  play_radio.service  radio_list  readme.md
.github/workflows/: main.yml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
tests/: CMakeLists.txt  tests.cpp
